--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="shortcut icon" href="./assets/images/favicon-32x32.png">
 </head>
 <body>
-	<div class="div-1">
+	<div class="div-principal">
 		<section class="section-1">
 			<p class="p-1">
 				Join our community
@@ -19,11 +19,9 @@
 			</p>
 			<p class="p-3">
 				Gain access to our full library of tutorials along with expert code reviews.<br>
-    			Perfect for any developers who are serious about honing their skills.
+				Perfect for any developers who are serious about honing their skills.
 			</p>
 		</section>
-	</div>
-	<div class="div-2">
 		<section class="section-2">
 			<p class="p-4">
 				Monthly Subscription
@@ -43,14 +41,13 @@
 			</p>
 			<p class="p-8">
 				Tutorials by industry experts<br>
-    			Peer &amp; expert code review<br>
+				Peer &amp; expert code review<br>
 				Coding exercises<br>
-    			Access to our GitHub repos<br>
-    			Community forum<br>
-    			Flashcard decks<br>
+				Access to our GitHub repos<br>
+				Community forum<br>
+				Flashcard decks<br>
 				New videos every week
 			</p>
 		</section>
 	</div>
-</body>
 </html>
